slider alignment fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -638,7 +638,6 @@ article {
 
 .content-images-featured {
 	width: 100%;
-	height: 100% !important;
 }
 
 iframe {
@@ -656,15 +655,15 @@ iframe {
 
 *****************************************/
 .carousel {
-	height: 300px;
+	height: 350px;
 }
 
 .carousel-inner {
-	height: 300px;
+	height: 350px;
 }
 
 .carousel-item {
-	height: 300px;
+	height: 350px;
 }
 
 .carousel:hover {
